--- a/style.css
+++ b/style.css
@@ -1,9 +1,52 @@
+
 body{
-    margin:0;
-    padding: 0;
+    margin:0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 a {
     text-decoration: none;
+}
+.hero-section::after{
+    content: "";
+    position:absolute;
+    background: rgba(0, 0, 0, 0.651);
+}
+.hero-section{
+    width: 100%;
+    height: 100vh;
+    background-image: url( 'img/christopher-gower-m_HRfLhgABo-unsplash.jpg') ;
+   background-position: center;
+   background-size: cover;
+    background-repeat: no-repeat,;
+     margin-top:-5 ; 
+   
+  background-color: #3b3434;
+  border: 1px solid black;
+  opacity: 0.6;
+}
+.top-header{
+    padding-top:9px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.logo{}
+.logo h3{
+    color: white !important;
+    font-weight: 900 !important;
+    padding-left: 10px;
+}
+.logo span{
+    color :#FF0000;
+    display: inline-block;
+}
+.menu{}
+.menu a{
+   display: inline-block;
+   text-transform: uppercase;
+   color :#FF0000;
+   padding :0px 10px
 }
